# hazard-level

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-all.sh  build_wasm.sh  cross_pre_build.sh  flake.nix
src/: fov.rs  main.rs  map_gen.rs  world.rs
static/: 0.ppm
wasm/: index.html
