[package]
name = "run"
version = "0.1.0"
authors = ["Matthew Pfeiffer <spferical@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = {git = "https://github.com/amethyst/bracket-lib.git"}
indexmap = "1.0"
rand = { version = "0.8", default-features=false, features=["small_rng"] }
enum-map = "0.6"
lazy_static = "1.2"
