[package]
name = "run"
version = "0.1.0"
authors = ["Matthew Pfeiffer <spferical@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
bracket-lib = {git = "https://github.com/amethyst/bracket-lib.git"}
indexmap = "1.0"
rand = { version = "0.8", default-features=false, features=["small_rng"] }
enum-map = "0.6"
lazy_static = "1.2"
imageproc = "0.22.0"
image = "0.23.14"
textwrap = "0.13.4"